# kaldi_native_io

./: .flake8  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
.github/workflows/: build-pip-windows.yml  build-pip.yml  build-wheels-aarch64.yaml  build-wheels-macos.yaml  build-wheels-win32.yaml  build-wheels.yaml  build.yml  build_conda_macos.yml  build_conda_ubuntu.yml  build_conda_windows.yml  nightly-conda.yml  nightly-pip.yml  nightly-test.yml  publish_to_pypi.yml  test-pip-install.yaml
cmake/: kaldi_native_ioConfig.cmake.in  kaldi_native_ioConfigVersion.cmake.in  pybind11.cmake
cmake/Modules/: FetchContent.cmake
kaldi_native_io/: CMakeLists.txt
kaldi_native_io/csrc/: CMakeLists.txt  CPPLINT.cfg  basic-filebuf.h  compressed-matrix.cc  compressed-matrix.h  io-funcs-inl.h  io-funcs.cc  io-funcs.h  kaldi-holder-inl.h  kaldi-holder.cc  kaldi-holder.h  kaldi-io-inl.h  kaldi-io.cc  kaldi-io.h  kaldi-matrix-inl.h  kaldi-matrix.cc  kaldi-matrix.h  kaldi-pipebuf.h  kaldi-semaphore.cc  kaldi-semaphore.h  kaldi-table-inl.h  kaldi-table.cc  kaldi-table.h  kaldi-utils.cc  kaldi-utils.h  kaldi-vector.cc  kaldi-vector.h  log.h  matrix-common.h  matrix-shape.cc  matrix-shape.h  parse-options.cc  parse-options.h  posterior.cc  posterior.h  stl-utils.h  text-utils.cc  text-utils.h  wave-reader.cc  wave-reader.h
kaldi_native_io/python/csrc/: CMakeLists.txt  blob.cc  blob.h  compressed-matrix.cc  compressed-matrix.h  copy-blob.cc  kaldi-matrix.cc  kaldi-matrix.h  kaldi-table.cc  kaldi-table.h  kaldi-vector.cc  kaldi-vector.h  kaldiio.cc  kaldiio.h  matrix-shape.cc  matrix-shape.h  parse-options.cc  parse-options.h  wave-reader.cc  wave-reader.h
kaldi_native_io/python/kaldi_native_io/: __init__.py  table_types.py
kaldi_native_io/python/tests/: CMakeLists.txt  test_blob_writer_reader.py  test_bool_writer_reader.py  test_compressed_matrix_writer_reader.py  test_double_matrix_writer_reader.py  test_double_vector_writer_reader.py  test_double_writer_reader.py  test_float_matrix_writer_reader.py  test_float_pair_vector_writer_reader.py  test_float_vector_writer_reader.py  test_float_writer_reader.py  test_gauss_post_writer_reader.py  test_htk_matrix_writer_reader.py  test_int32_pair_vector_writer_reader.py  test_int32_vector_vector_writer_reader.py  test_int32_vector_writer_reader.py  test_int32_writer_reader.py  test_int8_vector_writer_reader.py  test_matrix_shape_reader.py  test_posterior_writer_reader.py  test_token_vector_writer_reader.py  test_token_writer_reader.py  test_wave_data.py  test_wave_info_reader.py  test_wave_reader.py
scripts/: build_conda.sh  check_style_cpplint.sh
scripts/conda/kaldi_native_io/: build.sh  meta.yaml
